# neos-work

./: .gitignore  .prettierignore  .prettierrc  README.ko.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  globals.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: neos-engine-aarch64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: package.json  tsconfig.json
apps/server/src/: index.ts
docs/: claude_code_spec.md  claude_cowork_spec.md
docs/implementation/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.3.0.md  v0.3.1.md  v0.3.10.md  v0.3.11.md  v0.3.12.md  v0.3.13.md  v0.3.14.md  v0.3.15.md  v0.3.16.md  v0.3.17.md  v0.3.18.md  v0.3.19.md  v0.3.2.md  v0.3.20.md  v0.3.21.md  v0.3.22.md  v0.3.23.md  v0.3.24.md  v0.3.25.md  v0.3.26.md  v0.3.27.md  v0.3.28.md  v0.3.29.md  v0.3.3.md  v0.3.30.md  v0.3.31.md  v0.3.32.md  v0.3.33.md  v0.3.34.md  v0.3.35.md  (+57 more)
docs/plans/: INITIAL_PLAN.md  PLAN_FOR_V0_1_1.md  PLAN_FOR_V0_1_2.md  PLAN_FOR_V0_1_3.md  PLAN_FOR_V0_1_4.md  PLAN_FOR_V0_2_0.md  PLAN_FOR_V0_2_1.md  PLAN_FOR_V0_2_2.md  PLAN_FOR_V0_2_3.md  PLAN_FOR_V0_2_4.md  PLAN_FOR_V0_3_0.md
docs/reference/: open-design-repository-spec-ko.md  openclaw.md
(+234 files in other folders)
