[package]
name = "neos-work"
version = "0.1.0"
description = "An open-source alternative to Claude Cowork"
authors = ["NEOS AI"]
edition = "2021"
license = "MIT"

[lib]
name = "neos_work_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
